ChangeLog for ARQ
=================

==== ARQ 2.8.9
** Java 6 is now required for running ARQ.

+ DatasetFactory: perferred methods for an in-memory dataset are:
     create() -- will automatically add in-memory named graphs  
     createFixed() -- needs explicitly added extra graph  
+ BUG FIX: Mis-execution of GRAPH ?g { .. } where ?g used inside { .. } (JENA-154)
+ Bug fix: ResourceUtils.renameResource() no longer uses Iterator.remove() (JENA-76)
+ Bug fix: Query objects with aggregators cannot be reused (JENA-120)
+ REGEX now accepts xsd:string and literals with language tags in the first argument. 
+ Add function STRBEFORE, STRAFTER and REPLACE for SPARQL 1.1
+ Add function UUID  [ARQ language only]  
+ Remove LARQ from ARQ.  LARQ is now a separate Jena module.
+ Fix reuse of query objects (aggregation used shared state) (JENA-121)
+ Spill to disk update (enable with ARQ.spillToDiskThreshold) (JENA-45)
+ External sort (enable with ARQ.spillToDiskThreshold) (JENA-44) 
+ Remove RDQL from ARQ (code in Archive/ in SVN -- will not be updated) 
+ ResultSetUtils.union(ResultSet ... sets)
+ Add optimization for DISTINCT/ORDER BY/LIMIT N (JENA-108)
+ Add optimization for DISTINCT/ORDER BY (JENA-90)
+ Add optimization for ORDER BY/LIMIT N (JENA-89)
+ General upgrade of dependent systems (not Lucene - see LARQ module for use with Lucene 3)
+ Introduce "bindigns IO", a subsystem for efficient reading and writing of result bindings. 
+ Make CONCAT follow the SPARQL 1.1 spec properly. 
+ Bug fix: ORDER BY and FILTERs in sub-selects didn't work if ordering by non-SELECT variables.
+ Bug fix: Equality of algebra operator (order) wasn't checkign all aspects of the op.
+ Bug fix: SUM and AVG over errors didn't generate an error as they should do.
+ Add TSVInput processor (JENA-69 / Laurent Pellegrino) 
+ Added DatasetGraph.add(g,s,p,o) and .delete(g,s,p,o) (JENA-65)
+ Aggregates COUNT(?x) and COUNT(DISTINCT ?x) now skips errors in their expressions