@@ -39,4 +39,6 @@ public class NodeConst
     public static final Node nodeNil        = RDF.Nodes.nil ;
     
     public static final Node nodeOwlSameAs  = OWL.sameAs.asNode() ;
+    public static final Node dtRDFlangString = Node.createURI(RDF.getURI()+"langString") ;
+
 }
