@@ -1,4 +1,4 @@
-# Whichliterals have xsd:string as a datatype
+# Which literals have xsd:string as a datatype
 
 PREFIX : <http://example/> 
 PREFIX  xsd:    <http://www.w3.org/2001/XMLSchema#>
