@@ -1,20 +1,12 @@
 <?xml version="1.0"?>
-<sparql
-    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-    xmlns:xs="http://www.w3.org/2001/XMLSchema#"
-    xmlns="http://www.w3.org/2005/sparql-results#" >
+<sparql xmlns="http://www.w3.org/2005/sparql-results#">
   <head>
     <variable name="x"/>
   </head>
   <results>
     <result>
       <binding name="x">
-        <uri>http://example/x1</uri>
-      </binding>
-    </result>
-    <result>
-      <binding name="x">
-        <uri>http://example/x2</uri>
+        <uri>http://example/x5</uri>
       </binding>
     </result>
     <result>
@@ -24,7 +16,17 @@
     </result>
     <result>
       <binding name="x">
-        <uri>http://example/x5</uri>
+        <uri>http://example/x3</uri>
+      </binding>
+    </result>
+    <result>
+      <binding name="x">
+        <uri>http://example/x2</uri>
+      </binding>
+    </result>
+    <result>
+      <binding name="x">
+        <uri>http://example/x1</uri>
       </binding>
     </result>
   </results>
